possible fix for layout breaking

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -23,6 +23,8 @@
 body {
   min-height: 100vh;
   overflow-x: hidden;
+  position: relative;
+  vertical-align: bottom;
   background: var(--halister-theme-darkgray);
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
